--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcc 'PZ'
 - !lcc 'DD'
 - !lcsh 'Rhineland (Germany) -- Description and travel -- Juvenile literature'
+- GITenberg
 title: Rollo on the Rhine
 url: http://www.gutenberg.org/ebooks/22511
